--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,3 +5,63 @@
     Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol';
 }
+
+body {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(90, 134, 199);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper {
+  background-color: rgb(212, 212, 212);
+}
+
+#search {
+  width: 100%;
+  background-color: rgb(64, 64, 64);
+  height: 30px;
+  border: none;
+  outline: none;
+  padding: 0 8px;
+  color: white;
+}
+
+.weatherInfo {
+  background-color: rgb(212, 212, 212);
+  display: grid;
+  align-content: center;
+  justify-content: center;
+}
+
+.weatherInfo > div {
+  display: grid;
+  grid-template-columns: 156px auto;
+  align-items: center;
+  justify-content: start;
+  align-content: center;
+  gap: 16px;
+}
+
+.weatherInfo > div > h3 {
+  width: 156px;
+  display: grid;
+  justify-content: end;
+  letter-spacing: 0px;
+}
+
+h1 {
+  font-size: 64px;
+  width: fit-content;
+}
+
+h4 {
+  letter-spacing: 1px;
+}
+
+#location {
+  display: grid;
+  grid-template-columns: 1fr;
+}
