--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,14 +9,20 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-color: rgb(90, 134, 199);
-  display: grid;
-  justify-content: center;
-  align-items: center;
 }
 
 .wrapper {
-  background-color: rgb(212, 212, 212);
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(90, 134, 199);
+  display: grid;
+  align-items: center;
+  grid-template-rows: max-content 0.5fr;
+}
+
+.userInput {
+  display: grid;
+  grid-template-columns: 1fr auto;
 }
 
 #search {
@@ -24,13 +30,37 @@ body {
   background-color: rgb(64, 64, 64);
   height: 30px;
   border: none;
+  border-right: 2px solid rgb(212, 212, 212);
   outline: none;
   padding: 0 8px;
   color: white;
 }
 
+button {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(64, 64, 64);
+  border: none;
+  outline: none;
+  padding: 0 8px;
+  color: white;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+}
+
+button:hover {
+  background-color: rgb(20, 20, 20);
+  font-size: 15px;
+}
+
+button:active {
+  background-color: rgb(95, 95, 95);
+  font-size: 14px;
+}
+
 .weatherInfo {
-  background-color: rgb(212, 212, 212);
   display: grid;
   align-content: center;
   justify-content: center;
@@ -38,7 +68,7 @@ body {
 
 .weatherInfo > div {
   display: grid;
-  grid-template-columns: 156px auto;
+  grid-template-columns: 128px 128px;
   align-items: center;
   justify-content: start;
   align-content: center;
@@ -46,7 +76,6 @@ body {
 }
 
 .weatherInfo > div > h3 {
-  width: 156px;
   display: grid;
   justify-content: end;
   letter-spacing: 0px;
@@ -64,4 +93,5 @@ h4 {
 #location {
   display: grid;
   grid-template-columns: 1fr;
+  justify-items: center;
 }
