--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,7 +35,7 @@ body {
 .userInput {
   display: grid;
   grid-template-columns: 0.2fr auto;
-  justify-content: end;
+  justify-content: center;
 }
 
 #search {
